--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -12,13 +12,14 @@
   width: 400px;
   height: 600px;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 6px;
   display: flex;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
   align-items: center;
   flex-direction: column;
 }
 .card {
-  height: 500px;
+  width: 100%;
+  height: 550px;
   overflow: auto;
 }
