--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -9,7 +9,7 @@
   background: linear-gradient(#e66465, #9198e5);
 }
 .wrapper {
-  width: 400px;
+  display: flex;
   height: 600px;
   background-color: #fff;
   border-radius: 6px;
