--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -7,19 +7,57 @@
   min-height: 100vh;
   flex-direction: column;
   background: linear-gradient(#e66465, #9198e5);
+  overflow: hidden;
 }
 .wrapper {
   display: flex;
-  height: 600px;
+  height: 700px;
   background-color: #fff;
   border-radius: 6px;
   display: flex;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
   align-items: center;
   flex-direction: column;
+  width: 450px;
 }
 .card {
   width: 100%;
-  height: 550px;
+  min-height: 650px;
   overflow: auto;
+}
+.wrappertest {
+  background-color: lightblue;
+  cursor: url('https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png')
+      39 39,
+    auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  border-radius: 6px;
+}
+.deck {
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  will-change: transform;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.deck > div {
+  touch-action: none;
+  background-color: white;
+  background-size: auto 85%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 45vh;
+  max-width: 300px;
+  height: 85vh;
+  max-height: 570px;
+  will-change: transform;
+  border-radius: 10px;
+  box-shadow: 0 12.5px 100px -10px rgba(50, 50, 73, 0.4),
+    0 10px 10px -10px rgba(50, 50, 73, 0.3);
 }
